--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto provident aliquid placeat saepe natus sit, quaerat ducimus minima blanditiis! Itaque, cupiditate perferendis enim fugiat minus explicabo error magni placeat ducimus.</p>
+    </div>
 </body>
 </html>
