--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>My first website</h3>
+        <h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto provident aliquid placeat saepe natus sit, quaerat ducimus minima blanditiis! Itaque, cupiditate perferendis enim fugiat minus explicabo error magni placeat ducimus.</p>
+    </div>
+    <div>
+        <h3>My second blog</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto provident aliquid placeat saepe natus sit, quaerat ducimus minima blanditiis! Itaque, cupiditate perferendis enim fugiat minus explicabo error magni placeat ducimus.</p>
+    </div>
+    <div>
+        <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto provident aliquid placeat saepe natus sit, quaerat ducimus minima blanditiis! Itaque, cupiditate perferendis enim fugiat minus explicabo error magni placeat ducimus.</p>
     </div>
 </body>
