added a list to push code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto provident aliquid placeat saepe natus sit, quaerat ducimus minima blanditiis! Itaque, cupiditate perferendis enim fugiat minus explicabo error magni placeat ducimus.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m "add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
