--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>I want to become a web developer</h3>
+        <img src="images/developer.jpg" alt="" height="300" width="300">
+    </div>
 </body>
 </html>
